--- a/index.html
+++ b/index.html
@@ -11,81 +11,71 @@
   <title>Kairos Media Studio</title>
 
   <!-- ESTILOS -->
-  <link rel="stylesheet" href="./css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
-  <link rel="icon" href="./assets/img/logo64x64.png" type="image/png">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css">
+<link rel="icon" href="./assets/img/logo64x64.png" type="image/png">
 </head>
 
 <body>
 <header>
   <div class="tituloencabezado">
-    <h1>Kairos Media Studio</h1>
+      <h1>Kairos Media Studio</h1>
   </div>
 
   <nav>
-    <button class="menu-toggle" aria-label="Abrir menú">☰</button>
-    <ul>
-      <li><a href="./index.html">Inicio</a></li>
-      <li><a href="./pages/producto.html">Producto</a></li>
-      <li><a href="./pages/galeria.html">Galería</a></li>
-      <li><a href="./pages/acerca-de.html">Acerca de</a></li>
-      <li><a href="./pages/contacto.html">Contacto</a></li>
-    </ul>
+      <button class="menu-toggle">☰</button>
+      <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="pages/producto.html">Producto</a></li>
+          <li><a href="pages/galeria.html">Galería</a></li>
+          <li><a href="pages/acerca-de.html">Acerca de</a></li>
+          <li><a href="pages/contacto.html">Contacto</a></li>
+      </ul>
   </nav>
 </header>
 
-<script>
-  const toggle = document.querySelector('.menu-toggle');
-  const menu = document.querySelector('nav ul');
-
-  toggle.addEventListener('click', () => {
-    menu.classList.toggle('show');
-    toggle.classList.toggle('active');
-  });
-
-  document.querySelectorAll('nav a').forEach(link => {
-    link.addEventListener('click', () => {
-      menu.classList.remove('show');
-      toggle.classList.remove('active');
-    });
-  });
-</script>
-
 <section class="hero">
-  <img src="./assets/img/banner.webp" alt="Computadora digital">
-  <p class="hero-texto">Revolucionando el Marketing Digital</p>
+  <div class="container-fluid p-0">
+    <img src="./assets/img/banner.webp" alt="Computadora digital" class="w-100 d-block">
+    <p class="hero-texto">Revolucionando el Marketing Digital</p>
+  </div>
 </section>
 
 <main>
-  <section class="servicios">
+<section class="servicios">
+
     <article class="servicio basico">
       <img src="./assets/img/servicio-basico.webp" alt="Servicio básico">
       <h3>Servicio Básico</h3>
       <p>$99</p>
     </article>
+
     <article class="servicio intermedio">
       <img src="./assets/img/servicio-intermedio.webp" alt="Servicio intermedio">
       <h3>Servicio Intermedio</h3>
       <p>$149</p>
     </article>
+
     <article class="servicio avanzado">
       <img src="./assets/img/servicio-avanzado.webp" alt="Servicio avanzado">
       <h3>Servicio Avanzado</h3>
       <p>$200</p>
     </article>
-  </section>
+
+</section>
 </main>
 
 <section class="contacto">
-  <div class="contacto-container">
+  <div class="contacto-container container">
     <h2>Contáctanos</h2>
-    <form>
-      <div class="input-group">
-        <input type="text" placeholder="Nombre">
-        <input type="email" placeholder="Correo">
+    <form class="d-flex flex-column gap-3">
+      <div class="input-group d-flex gap-2">
+        <input type="text" class="form-control" placeholder="Nombre">
+        <input type="email" class="form-control" placeholder="Correo">
       </div>
-      <textarea placeholder="Tu mensaje..."></textarea>
-      <button type="submit">Enviar</button>
+      <textarea class="form-control" placeholder="Tu mensaje..." rows="5"></textarea>
+      <button type="submit" class="btn btn-dark align-self-start">Enviar</button>
     </form>
   </div>
 </section>
@@ -94,5 +84,6 @@
   <p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
   <img src="./assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
 </footer>
+<script src="./js/menu.js" defer></script>
 </body>
 </html>
