--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -11,8 +11,9 @@
 <title>Kairos Media Studio</title>
 
 <!-- ESTILOS -->
-<link rel="stylesheet" href="../css/styles.css">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../css/styles.css">
 <link rel="icon" href="../assets/img/logo64x64.png" type="image/png">
 </head>
 
@@ -23,33 +24,16 @@
 </div>
 
 <nav>
-    <button class="menu-toggle" aria-label="Abrir menú">☰</button>
+    <button class="menu-toggle">☰</button>
     <ul>
-    <li><a href="../index.html">Inicio</a></li>
-    <li><a href="./producto.html">Producto</a></li>
-    <li><a href="./galeria.html">Galería</a></li>
-    <li><a href="./acerca-de.html">Acerca de</a></li>
-    <li><a href="./contacto.html">Contacto</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./producto.html">Producto</a></li>
+        <li><a href="./galeria.html">Galería</a></li>
+        <li><a href="./acerca-de.html">Acerca de</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
     </ul>
 </nav>
 </header>
-
-<script>
-const toggle = document.querySelector('.menu-toggle');
-const menu = document.querySelector('nav ul');
-
-toggle.addEventListener('click', () => {
-    menu.classList.toggle('show');
-    toggle.classList.toggle('active');
-});
-
-document.querySelectorAll('nav a').forEach(link => {
-    link.addEventListener('click', () => {
-    menu.classList.remove('show');
-    toggle.classList.remove('active');
-    });
-});
-</script>
 
 <main class="acerca">
 <section class="contenido-acerca">
@@ -75,6 +59,6 @@ document.querySelectorAll('nav a').forEach(link => {
 <p>&copy; 2025 Kairos Media Studio - hecho con esfuerzo :)</p>
 <img src="../assets/img/logo64x64.png" alt="Logo Kairos Media Studio">
 </footer>
-
+<script src="../js/menu.js" defer></script>
 </body>
 </html>
